wayland: Fix "non-"reactive xdg popups

xdg_positioner.set_reactive indicates whether the popup has to
reconstrained after the parent window moves, etc. If it's false, the
popup has still to move together with its parent.

BUG: 461994